@@ -6,8 +6,7 @@ DESIGN
 
 HIGH
 - show "Your Line" (GLT) and "A Correct Equation" (MTE) only if they get the challenge wrong
-- use only positive slopes for challenges in level 4 that force slope inversion
-- ploy (x1,y1) for answer and guess if they get the challenge wrong
+- plot (x1,y1) for answer and guess if they get the challenge wrong
 - in PTP challenges, only show guess lines in state=TRY_AGAIN || state==NEXT
 - Game: generate challenges for levels 5-6
 
